--- a/women.html
+++ b/women.html
@@ -112,7 +112,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <a><h3 class="mb-0">ETHS Women in Science, Technology, Engineering, and Mathematics</h3></a>
+              <a href="http://ethswistem.weebly.com/"> <h3 class="mb-0">ETHS Women in Science, Technology, Engineering, and Mathematics</h3></a>
             </div>
           </div>
 
