--- a/fun.html
+++ b/fun.html
@@ -44,22 +44,19 @@
             <a class="nav-link js-scroll-trigger" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
+            <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+            <a class="nav-link js-scroll-trigger" href="articles.html">Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
+            <a class="nav-link js-scroll-trigger" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
