--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body id="page-top">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <a class="navbar-brand js-scroll-trigger"  href="https://github.com/CMWesterfield16/Personal-Website" target="_blank">
         <span class="d-block d-lg-none">Caitlin Westerfield's Website</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
@@ -44,22 +44,19 @@
             <a class="nav-link js-scroll-trigger" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
+            <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+            <a class="nav-link js-scroll-trigger" href="articles.html">Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
+            <a class="nav-link js-scroll-trigger" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
