--- a/fun.html
+++ b/fun.html
@@ -74,7 +74,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <h3 class="mb-3">Marathon Running</h3>
+              <h3 class="mb-3 section-midheading">Marathon Running</h3>
             </div>
           </div>
 
@@ -107,6 +107,53 @@
             </div>
 
           </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-3 section-midheading">Travel</h3>
+            </div>
+          </div>
+
+          <iframe class="mb-3"
+          src="https://www.google.com/maps/d/u/0/embed?mid=1Oxut91pfCjTL5TBja6Vo0ZhT8OGGVFEx" width="900" height="480">
+          </iframe>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-3 section-midheading">Reading</h3>
+              <div class="row">
+                <img class="col-md-4 col-sm-6" src="img/books/readingchallenge.png" width="200" height="100">
+                <div class="col-md-8 col-sm-6">
+                  <h3>Goal: 40 Books</h3>
+                  <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width:33%">33%</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <h3>Books So Far in 2018</h3>
+
+          <ul>
+            <li><i>American Grace: How Religion Divides and Unites Us</i>, Robert Putnam & David Campbell</li>
+            <li><i>Between Past and Future</i>, Hannah Arendt</li>
+            <li><i>Blankets</i>, Craig Thompson</li>
+            <li><i>A Matter of Interpretation</i>, Antonin Scalia</li>
+            <li><i>The Living Constitution</i>, David Strauss</li>
+            <li><i>Restless Souls: The Making of American Spirituality</i>, Leigh Eric Schmidt</li>
+            <li><i>Life of Pi</i>, Yann Martel</li>
+            <li><i>The Forty Rules of Love</i>, Elif Shafak</li>
+            <li><i>Is There a Text in this Class?</i>, Stanley Fish</li>
+            <li><i>Parable of the Talents</i>, Octavia Butler</li>
+            <li><i>Dept. of Speculation</i>, Jenny Offill</li>
+            <li><i>Selling Spirituality: The Silent Takeover of Religion</i>, Jeremy Carette & Richard King</li>
+            <li><i>Kafka on the Shore</i>, Haruki Murakami</li>
+
+          </ul>
+
+
+
         </div>
 
       </section>
