--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Caitlin
+          <h1 class="mb-5">Caitlin
             <span class="text-primary">Westerfield</span>
           </h1>
-          <div class="subheading mb-5">(773) 849-9335 ·
+          <!-- <div class="subheading mb-5">(773) 849-9335 ·
             <a href="mailto:caitlin.westerfield@yale.edu">caitlin.westerfield@yale.edu</a>
-          </div>
+          </div> -->
           <p class="mb-5">Hi my name is Caitlin and I am a rising junior at Yale originally from Evanston, IL. I am particularly interested in using education technology to fix major gaps within the education system. Please feel free to send me an email at <a href="mailto:caitlin.westerfield@yale.edu">caitlin.westerfield@yale.edu</a>. I would love to hear from you, especially if you are a fellow student, to talk about my experiences!<!--I think that technology has the power to equalize students no matter their gender, race, ethinicity, or economic background by providing the tools to adapt learning to particular students.-->
           </p>
           <!-- <p>I pursue my passion in improving access to computer science and computer science education through my involvement with Code Haven as the current curriculum director and past events director, which teaches computer programming to 6 classrooms and a total of 120 students in New Haven Public Schools. As event director, I organized the first ever TeachTech in December 2017 – a conference aimed at showing teachers with no prior computer science experience how to incorporate a programming curriculum into their classrooms. This past May 2018, I also planned the inaugral Code Haven Project Fair, where our 120 students presented the apps they had been building in a science fair-esque event to get them excited about computer science and inspire them to continue pursuing all that programming has to offer.</p>-->
@@ -90,7 +90,7 @@
               </a>
             </li> -->
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/caitlin-westerfield/">
+              <a href="https://www.linkedin.com/in/caitlin-westerfield/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/CMWesterfield16">
+              <a href="https://github.com/CMWesterfield16" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -106,13 +106,21 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://medium.com/@caitlin.westerfield">
+              <a href="https://medium.com/@caitlin.westerfield" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
+            <!-- <li class="list-inline-item">
+              <a href="https://medium.com/@caitlin.westerfield" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i><img class="fa fa-stack-1x fa-inverse" src="vendor/font-awesome/css/goodreads-g.svg"></i>
+                </span>
+              </a>
+            </li> -->
           </ul>
         </div>
       </section>
