--- a/fun.html
+++ b/fun.html
@@ -122,7 +122,13 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-3 section-midheading">Reading</h3>
               <div class="row">
+                <!-- <div class="col-md-4 col-sm-6">
+                  <a href="https://www.goodreads.com/CMWesterfield" target="_blank">
+                    <img src="img/books/readingchallenge.png" width="200" height="100">
+                  </a>
+                </div> -->
                 <img class="col-md-4 col-sm-6" src="img/books/readingchallenge.png" width="200" height="100">
+
                 <div class="col-md-8 col-sm-6">
                   <h3>Goal: 40 Books</h3>
                   <div class="progress mb-3">
@@ -135,14 +141,14 @@
 
           <h3>Books So Far in 2018</h3>
 
-          <ul>
+          <ol>
             <li><i>American Grace: How Religion Divides and Unites Us</i>, Robert Putnam & David Campbell</li>
-            <li><i>Between Past and Future</i>, Hannah Arendt</li>
             <li><i>Blankets</i>, Craig Thompson</li>
             <li><i>A Matter of Interpretation</i>, Antonin Scalia</li>
             <li><i>The Living Constitution</i>, David Strauss</li>
             <li><i>Restless Souls: The Making of American Spirituality</i>, Leigh Eric Schmidt</li>
             <li><i>Life of Pi</i>, Yann Martel</li>
+            <li><i>Between Past and Future</i>, Hannah Arendt</li>
             <li><i>The Forty Rules of Love</i>, Elif Shafak</li>
             <li><i>Is There a Text in this Class?</i>, Stanley Fish</li>
             <li><i>Parable of the Talents</i>, Octavia Butler</li>
@@ -150,9 +156,7 @@
             <li><i>Selling Spirituality: The Silent Takeover of Religion</i>, Jeremy Carette & Richard King</li>
             <li><i>Kafka on the Shore</i>, Haruki Murakami</li>
 
-          </ul>
-
-
+          </ol>
 
         </div>
 
