--- a/fun.html
+++ b/fun.html
@@ -132,7 +132,7 @@
                 <div class="col-md-8 col-sm-6">
                   <h3>Goal: 40 Books</h3>
                   <div class="progress mb-3">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width:33%">33%</div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width:35%">35%</div>
                   </div>
                 </div>
               </div>
@@ -155,6 +155,7 @@
             <li><i>Dept. of Speculation</i>, Jenny Offill</li>
             <li><i>Selling Spirituality: The Silent Takeover of Religion</i>, Jeremy Carette & Richard King</li>
             <li><i>Kafka on the Shore</i>, Haruki Murakami</li>
+            <li><i>The Handmaid's Tale</i>, Margaret Atwood</li>
 
           </ol>
 
